WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313359
Fix imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-ratio-053.html
https://bugs.webkit.org/show_bug.cgi?id=313359
Summary
Fix imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-r...
alan
Reported
2026-04-26 13:44:20 PDT
ssia
Attachments
Patch
(4.20 KB, patch)
2026-04-26 13:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.13 KB, patch)
2026-04-26 13:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-26 13:46:22 PDT
Created
attachment 479314
[details]
Patch
alan
Comment 2
2026-04-26 13:49:27 PDT
Created
attachment 479315
[details]
[fast-cq]Patch
EWS
Comment 3
2026-04-27 05:24:59 PDT
Committed
312085@main
(957846bf1e66): <
https://commits.webkit.org/312085@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479315
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-04-27 05:25:12 PDT
<
rdar://problem/175669774
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug